...
    }
}

private const val DEFAULT_CATEGORY_ID_START = 1001L

private val defaultCategoryNames = listOf(
    "ABBONAMENTI",
    "ADSL",
    "AMORE",
    "ARTE",
    "ASSICURAZIONI",
    "AUTO",
    "AUTOSTRADA",
...
